<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="viewModel"
                  type="com.maxx.nordvaest.ui.forgot_password.ForgotPasswordFragmentViewModel"/>
    </data>
    <LinearLayout style="@style/WidthMatchHeightMatchVertical">
        <RelativeLayout style="@style/WidthMatchHeightMatch">

            <LinearLayout
                    android:layout_alignParentTop="true"
                    android:layout_above="@+id/termsView"
                    android:background="@color/default_white_background"
                    android:padding="@dimen/activity_vertical_margin"
                    style="@style/WidthMatchHeightWrapVertical">


                <LinearLayout
                        style="@style/WidthMatchHeightWrapVertical">

                    <TextView
                            android:id="@+id/newPasswordLabel"
                            style="@style/LoginFieldTitleStyle"
                            android:text="@string/new_password"/>

                    <!--New Password-->
                    <com.google.android.material.textfield.TextInputLayout style="@style/BorderedTextInputLayoutStyle">

                        <LinearLayout style="@style/DefaultInputFieldWrapperStyle">

                            <com.google.android.material.textfield.TextInputEditText
                                    style="@style/BorderEditTextStyle"
                                    android:imeOptions="actionNext"
                                    app:validateEmpty="@{true}"
                                    android:text="@={viewModel.newPassword}"
                                    android:inputType="textPassword"
                                    app:validateEmptyMessage="@{@string/new_password_is_required}"/>
                        </LinearLayout>
                    </com.google.android.material.textfield.TextInputLayout>

                    <!--Confirm New Password-->
                    <TextView
                            android:id="@+id/confirmPasswordLabel"
                            style="@style/LoginFieldTitleStyle"
                            android:layout_marginTop="20dp"
                            android:text="@string/confirm_password"/>
                    <com.google.android.material.textfield.TextInputLayout style="@style/BorderedTextInputLayoutStyle">

                        <LinearLayout style="@style/DefaultInputFieldWrapperStyle">

                            <com.google.android.material.textfield.TextInputEditText
                                    style="@style/BorderEditTextStyle"
                                    android:imeOptions="actionDone"
                                    app:validateEmpty="@{true}"
                                    android:text="@={viewModel.confirmPassword}"
                                    android:inputType="textPassword"
                                    app:validateEmptyMessage="@{@string/confirm_password_is_required}"/>
                        </LinearLayout>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>


                <!--Buttons-->
                <com.google.android.material.button.MaterialButton
                        android:id="@+id/submitButton"
                        android:layout_marginTop="60dp"
                        style="@style/DefaultButtonStyle"
                        android:textAllCaps="false"
                        android:text="@string/submit"/>


            </LinearLayout>

            <!--Terms-->
            <LinearLayout
                    android:id="@+id/termsView"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:layout_alignParentBottom="true"
                    android:gravity="center"
                    style="@style/WidthMatchHeightWrapVertical">

                <TextView style="@style/WidthWrapHeightWrap"
                          android:textSize="12sp"
                          android:text="@string/privacy_policy"
                          android:textColor="#505050"/>
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>


</layout>
